--- a/rails-react-starter-tutorial/Gemfile
+++ b/rails-react-starter-tutorial/Gemfile
@@ -34,6 +34,7 @@ gem 'jbuilder', '~> 2.5'
 
 gem "figaro"
 gem "foreman"
+gem 'font-awesome-rails'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
