--- a/devise-facebook-oauth/Gemfile
+++ b/devise-facebook-oauth/Gemfile
@@ -35,6 +35,10 @@ gem 'jbuilder', '~> 2.5'
 
 #User Authentication
 gem 'devise'
+# User Authentication with Facebook
+gem 'omniauth-facebook'
+# Development ENV Variables
+gem 'figaro'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
