--- a/devise-facebook-oauth/Gemfile
+++ b/devise-facebook-oauth/Gemfile
@@ -39,6 +39,10 @@ gem 'devise'
 gem 'omniauth-facebook'
 # Development ENV Variables
 gem 'figaro'
+# Webpack manager
+gem 'webpacker', '~> 3.2'
+# 2 process
+gem "foreman"
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
