--- a/boilerplate-eth-rails/package.json
+++ b/boilerplate-eth-rails/package.json
@@ -7,7 +7,8 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "solc": "^0.4.20"
   },
   "devDependencies": {
     "webpack-cli": "^2.0.9",
