--- a/boilerplate-eth-rails/package.json
+++ b/boilerplate-eth-rails/package.json
@@ -4,11 +4,14 @@
   "dependencies": {
     "@rails/webpacker": "^3.2.2",
     "babel-preset-react": "^6.24.1",
+    "ganache-cli": "^6.0.3",
+    "mocha": "^5.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
-    "solc": "^0.4.20"
+    "solc": "^0.4.20",
+    "web3": "1.0.0-beta.26"
   },
   "devDependencies": {
     "webpack-cli": "^2.0.9",
