--- a/boilerplate-eth-rails/package.json
+++ b/boilerplate-eth-rails/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "solc": "^0.4.20",
+    "truffle-hdwallet-provider": "^0.0.3",
     "web3": "1.0.0-beta.26"
   },
   "devDependencies": {
