--- a/boilerplate-eth-rails/package.json
+++ b/boilerplate-eth-rails/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@rails/webpacker": "^3.2.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "ganache-cli": "^6.0.3",
     "mocha": "^5.0.1",
